# chico

./: Cargo.toml  Cargo_timeout_test.toml  README.md  codecov.json  test_timeout_integration.rs
.config/: nextest.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yaml  coverage.yaml  rust-clippy.yml
chico_cli/: Cargo.toml
chico_file/: Cargo.toml
chico_file/docs/: definitions.md
chico_file/src/: lib.rs  types.rs
chico_server/: Cargo.toml
chico_server/resources/test_cases/file-handler/: file_exist_return_ok.chf  file_not_exist_return_404.chf
chico_server/resources/test_cases/redirect-handler/: not_specified_status.chf  specified_status.chf
chico_server/resources/test_cases/respond-handler/: 403_status_code.chf  ok_with_body_response.chf  only_body_response.chf  simple_ok_response.chf
chico_server/resources/test_cases/reverse-proxy-handler/: reverse-proxy-sample-1.chf  reverse-proxy.chf
chico_server/src/: cli.rs  config.rs  daemon.rs  handlers.rs  load_balance.rs  main.rs  plan.rs  plan_test.rs  server.rs  test_utils.rs  timeout_test.rs  uri.rs  virtual_host.rs
chico_server/src/handlers/: file.rs  redirect.rs  respond.rs  reverse_proxy.rs
chico_server/src/load_balance/: node.rs  round_robin.rs
chico_server/tests/: cli.rs  daemon.rs  server.rs
chico_server/tests/cli/: validate_cmd.rs
crates/crates_tracing/: Cargo.toml
crates/crates_tracing/src/: lib.rs
crates/crates_uri/: Cargo.toml
crates_tracing/: Cargo.toml
crates_tracing/src/: lib.rs
crates_uri/src/: lib.rs
