[package]
name = "chico_file"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true


[dependencies]
nom = "7"
url= "2.5.4"

[dev-dependencies]
rstest = "0.25.0"


[lints]
workspace = true

[features]
# Treat warnings as a build error.
strict = []
default = ["strict"] 