[package]
name = "chico_file"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true


[dependencies]
nom = "7"
http = "1.3.1"
crates_uri = { version = "0.1.0", path = "../crates_uri" }

[dev-dependencies]
rstest = "0.25.0"
claims = "0.8.0"


[lints]
workspace = true

[features]
# Treat warnings as a build error.
strict = []
default = ["strict"] 
