[package]
name = "chico_server"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true


[dependencies]
chico_file = { path = "../chico_file" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1" , features = ["full"]}
hyper = { version = "1", features = ["full"] }
http = "1.3"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tokio-util = "0.7.14"
mimee = { version = "0.2"}
futures-util = { version = "0.3", default-features = false }
bytes = "1"
env_logger = "0.11.7"
log = "0.4.27"

[dev-dependencies]
rstest = "0.25.0"
assert_cmd = "2.0"
tempfile = "3"
predicates = "3.1.3"
reqwest = "0.12.14"
serial_test = "3.2.0"

[lints]
workspace = true

[features]
# Treat warnings as a build error.
strict = []
default = ["strict"] 

[[bin]]
name = "chico"
path = "src/main.rs"