[package]
name = "chico_server"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true


[dependencies]
chico_file = { path = "../chico_file" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1" , features = ["full"]}
hyper = { version = "1", features = ["full"] }
http = "1.3"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tokio-util = "0.7.15"
mimee = { version = "0.2"}
futures-util = { version = "0.3", default-features = false }
bytes = "1"
crates_tracing = { version = "0.1.0", path = "../crates/crates_tracing" }
crates_uri ={ version = "0.1.0", path = "../crates/crates_uri"}
tracing = { version = "0.1.41" }

[dev-dependencies]
axum = "0.8.4"
rstest = "0.26.1"
assert_cmd = "2.0"
tempfile = "3"
predicates = "3.1.3"
reqwest = {version = "0.12.22" , features = ["json"]}
serial_test = "3.2.0"
claims = "0.8.0"
serde_json = "1.0"

[lints]
workspace = true

[features]
# Treat warnings as a build error.
strict = []
default = ["strict"] 
stdin_shutdown = []

[[bin]]
name = "chico"
path = "src/main.rs"
