[package]
name = "crates_tracing"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
directories = "6.0.0"
tracing-opentelemetry = "0.31"
opentelemetry = { version = "0.30" }
opentelemetry-jaeger = "0.22"
opentelemetry-otlp = {version = "0.30" , features = ["grpc-tonic"]}
opentelemetry_sdk = "0.30"
[lints]
workspace = true
